--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^5.21.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.96.0",
     "@types/d3-scale": "^4.0.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
